+ Export mergeFeaturesByRank
+ *RDA & *CCA: scores parameter for specifying output
+ Improve mergeSEs and loadFromBiom
+ Faith index: bugfix
+ runRDA bugfix: vegan::dbrda and vegan::vegdist have different parameter for dissimilarity --> taken into account
+ Add support for Metaphlan v2
+ loadFromHumann: Improved speed

Changes in version 1.11.x
+ loadFromMetaphlan: support strain rank
+ agglomerateByRank: agglomerate tree fix
+ Replace taxonomyTree and addTaxonomyTree with getHierarchyTree and addHierarchyTree
+ splitOn: update rowTree fix
+ perSampleDominantFeatures: add new arguments (n, other.name, complete)
+ loadFromMetaphlan: support "taxonomy" column for specifying taxonomy
+ cluster: Overwrite old results instead of failing
+ getPrevalence: bugfix, if assay contains NA values, it does not end up to NA anymore.
+ getExperimentCrossCorrelation fix: enable using of sampleMap in MAE.
+ Implemented the setTaxonomyRanks function to specify which ranks are recognized as taxonomy ranks.
+ Rename cluster to addCluster
+ rename importers loadFromBiom, loadFromQIIME2, readQZA, loadFromMothur, loadFromMetaphlan, loadFromHumann
+ fix typo in loadFromBiom definition (deprecate file)
+ deprecate subsetSamples, subsetFeatures and subsetTaxa
+ deprecate plotNMDS after moving it to miaViz package
+ rename estimateDivergence to addDivergence
+ Add details to documentation of function agglomerateByPrevalence

Changes in version 1.13.x
+ Added new functions getMediation and addMediation
+ replace getExperiment* and testExperiment* functions with getCrossAssociation
+ Replace mergeRows and mergeCols with new function agglomerateByVariable
+ agglomerateByRank: bugfix related to agglomeration of non-existing tree
+ getHierarchyTree: bugfix related to empty cells in rowData
+ agglomerateByRank: bugfix: trees was not pruned correctly
+ rename meltAssay to meltSE
+ Rename countDominantFeatures and countDominantTaxa to summarizeDominance