@@ -97,8 +97,10 @@ export(setTaxonomyRanks)
 export(splitByRanks)
 export(splitOn)
 export(subsampleCounts)
+export(subsetByPrevalent)
 export(subsetByPrevalentFeatures)
 export(subsetByPrevalentTaxa)
+export(subsetByRare)
 export(subsetByRareFeatures)
 export(subsetByRareTaxa)
 export(subsetFeatures)
@@ -196,8 +198,10 @@ exportMethods(runRDA)
 exportMethods(splitByRanks)
 exportMethods(splitOn)
 exportMethods(subsampleCounts)
+exportMethods(subsetByPrevalent)
 exportMethods(subsetByPrevalentFeatures)
 exportMethods(subsetByPrevalentTaxa)
+exportMethods(subsetByRare)
 exportMethods(subsetByRareFeatures)
 exportMethods(subsetByRareTaxa)
 exportMethods(subsetFeatures)
